--- a/app/src/main/res/layout/fruit_item.xml
+++ b/app/src/main/res/layout/fruit_item.xml
@@ -5,13 +5,17 @@
     android:padding="16dp">
 
     <ImageView
+        android:layout_gravity="center_vertical"
         android:id="@+id/imageViewFruit"
         android:layout_width="120dp"
         android:layout_height="120dp"></ImageView>
 
     <LinearLayout
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
         android:orientation="vertical">
 
         <TextView
