--- a/app/src/main/res/layout/fragment_display.xml
+++ b/app/src/main/res/layout/fragment_display.xml
@@ -3,11 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.StaticFragment">
+    tools:context=".fragments.DisplayFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/textViewDisplay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorAccent" />
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
