added tabs sample in code

--- a/app/src/main/res/layout/second_activity.xml
+++ b/app/src/main/res/layout/second_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SecondActivity">
+    tools:context=".activity_sample.SecondActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
