--- a/app/src/main/res/layout/activity_fruits.xml
+++ b/app/src/main/res/layout/activity_fruits.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FruitsActivity">
+    tools:context=".recycler_view_sample.FruitsActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
