--- a/app/src/main/res/layout/activity_receiver.xml
+++ b/app/src/main/res/layout/activity_receiver.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ReceiverActivity">
+    tools:context=".activity_sample.ReceiverActivity">
 
     <TextView
         android:id="@+id/textViewReceivedMessage"
