--- a/app/src/main/res/layout/content_second.xml
+++ b/app/src/main/res/layout/content_second.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".SecondActivity"
+    tools:context=".activity_sample.SecondActivity"
     tools:showIn="@layout/second_activity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
