--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="space_148">148dp</dimen>
+    <dimen name="space_8">8dp</dimen>
+    <dimen name="space_128">128dp</dimen>
+    <dimen name="space_32">32dp</dimen>
 </resources>
