--- a/app/src/main/res/layout/activity_date_and_date_time_pickers.xml
+++ b/app/src/main/res/layout/activity_date_and_date_time_pickers.xml
@@ -5,15 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/layoutMain"
+    android:background="@drawable/animation"
     android:padding="@dimen/activity_horizontal_margin"
     tools:context=".fragments.AlertsActivity">
 
     <TextView
+        tools:text="helllo hello"
+        style="@style/LargeFontBlue"
         android:id="@+id/textViewDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"></TextView>
 
     <Button
+        android:background="@drawable/shape_and_stroke"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
